[tool.poetry]
name = "influxdb-odata-server"
version = "0.1.0"
description = ""
authors = ["Dallas Miller -X (dallmill - ETTAIN GROUP INC at Cisco) <dallmill@cisco.com>"]

[tool.poetry.dependencies]
python = "^3.9"
argcomplete = "^1.12.3"
aws-wsgi = "^0.2.7"
boto3 = "^1.19.9"
botocore = "^1.22.9"
certifi = "^2021.10.8"
cfn-flip = "^1.3.0"
chardet = "^4.0.0"
ciso8601 = "^2.2.0"
click = "^8.0.3"
docutils = "^0.18"
durationpy = "^0.5"
future = "^0.18.2"
hjson = "^3.0.2"
idna = "^3.3"
influxdb = "^5.3.1"
influxdb-client = "^1.23.0"
jmespath = "^0.10.0"
kappa = "^0.7.0"
lambda_packages = "^0.20.0"
placebo = "^0.10.0"
pyslet = "^0.7.20170805"
python-dateutil = "^2.8.2"
python-slugify = "^5.0.2"
pytz = "^2021.3"
PyYAML = "^6.0"
requests = "^2.26.0"
responses = "^0.15.0"
Rx = "^3.2.0"
s3transfer = "^0.5.0"
six = "^1.16.0"
toml = "^0.10.2"
tqdm = "^4.62.3"
troposphere = "^3.1.0"
Unidecode = "^1.3.2"
urllib3 = "^1.26.7"
Werkzeug = "^2.0.2"
wsgi-request-logger = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
